# rubato

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  justfile
crates/rubato/: Cargo.toml
crates/rubato-audio/: Cargo.toml
crates/rubato-audio/src/: abstract_audio_driver.rs  audio_driver.rs  audio_system.rs  bms_loudness_analyzer.rs  bms_renderer.rs  byte_pcm.rs  decode.rs  deferred_path_loader.rs  flac_processor.rs  float_pcm.rs  gdx_audio_device_driver.rs  gdx_sound_driver.rs  lib.rs  ms_adpcm_decoder.rs  pcm.rs  port_audio_driver.rs  recording_audio_driver.rs  shared_recording_audio_driver.rs  short_pcm.rs
crates/rubato-audio/tests/: audio_codec_fidelity.rs  type_cast_audit.rs
crates/rubato-bin/: Cargo.toml
crates/rubato-bin/src/: keymap.rs  main.rs  subsystem_init.rs
crates/rubato-bin/tests/: cli_smoke.rs
crates/rubato-e2e/: Cargo.toml
crates/rubato-e2e/src/: harness.rs  lib.rs  scenario.rs
crates/rubato-e2e/tests/: behavioral.rs
crates/rubato-external/: Cargo.toml
crates/rubato-external/src/: bms_search_accessor.rs  clipboard_helper.rs  discord_listener.rs  lib.rs  main_state_adapter.rs  pixmap_io.rs  score_data_importer.rs  screen_shot_exporter.rs  screen_shot_file_exporter.rs  screen_shot_twitter_exporter.rs  stubs.rs  webhook_handler.rs
crates/rubato-game/: Cargo.toml
crates/rubato-game/benches/: modifier_bench.rs
crates/rubato-game/src/: abstract_result_access.rs  display_mode.rs  event_type.rs  game_screen.rs  imgui_access.rs  imgui_notify.rs  ir_rival_provider.rs  lib.rs  main_loader.rs  main_state_access.rs  music_download_access.rs  obs_access.rs  platform.rs  ranking_data_cache_access.rs  score_data_cache.rs  score_database_access.rs  score_handoff.rs  song_database_accessor.rs  song_information_db.rs  table_update_source.rs  version_checker.rs
crates/rubato-game/tests/: core_concurrency.rs  core_config_roundtrip.rs  core_lifecycle.rs  core_main_loader_integration.rs  core_pattern_lane_shuffle_oob.rs  core_pattern_overflow_panic.rs  core_pattern_pipeline_integration.rs  core_pattern_randomizer_rng_test.rs  core_pattern_rng_fix_test.rs  core_play_data_accessor_integration.rs  core_score_db_injection.rs  core_score_roundtrip.rs  core_type_cast_audit.rs  core_wiring.rs  e2e_gameplay_lifecycle.rs  e2e_screen_transitions.rs  e2e_state_transition_combinations.rs  helpers.rs  ir_ir_injection.rs  ir_smoke_test.rs  launcher_wiring.rs  play_judge_integration.rs  play_overflow_panic.rs  play_type_cast_audit.rs  play_wiring_invariants.rs  song_lifecycle.rs  song_md_processor_smoke_test.rs  song_song_db_init.rs  song_song_db_injection.rs  state_decide_memory_safety.rs  state_result_stub_leak_test.rs  state_select_bar_manager_integration.rs  wiring_integration.rs
crates/rubato-launcher/: Cargo.toml
crates/rubato-launcher/src/: audio_configuration_view.rs  controller_config_view_model.rs  course_editor_view.rs  discord_configuration_view.rs  editable_table_view.rs  folder_editor_view.rs  game_screen.rs  input_configuration_view.rs  ir_configuration_view.rs  launcher_ui.rs  lib.rs  main_loader.rs  numeric_spinner.rs  obs_configuration_view.rs  platform.rs  play_configuration_view.rs  resource_configuration_view.rs  skin_configuration_view.rs  song_data_view.rs  spinner_cell.rs  state_factory.rs  stream_editor_view.rs  stubs.rs  table_editor_view.rs  trainer_view.rs  version_checker.rs  video_configuration_view.rs
crates/rubato-launcher/tests/: e2e_gameplay_lifecycle.rs  e2e_screen_transitions.rs  e2e_state_transition_combinations.rs  launcher_wiring.rs  wiring_integration.rs
crates/rubato-play/: Cargo.toml
crates/rubato-play/src/: bms_player.rs  bms_player_rule.rs  control_input_processor.rs  gauge_property.rs  ghost_battle_play.rs  groove_gauge.rs  judge_algorithm.rs  judge_manager.rs  judge_property.rs  key_input_processor.rs  key_sound_processor.rs  lane_property.rs  lane_renderer.rs  lib.rs  play_skin.rs  pomyu_chara_processor.rs  practice_configuration.rs  rhythm_timer_processor.rs  skin_bga.rs  skin_gauge.rs  skin_hidden.rs  skin_judge.rs  skin_note.rs  target_property.rs
crates/rubato-play/tests/: judge_integration.rs  overflow_panic.rs  type_cast_audit.rs  wiring_invariants.rs
crates/rubato-render/: Cargo.toml
crates/rubato-render/src/: blend.rs  color.rs  font.rs  glyph_atlas.rs  gpu_context.rs  gpu_texture_manager.rs  lib.rs  pixmap.rs  pixmap_resource_pool.rs  render_pipeline.rs  resource_pool.rs  shader.rs  skin_drawable.rs  sprite_batch.rs  texture.rs
crates/rubato-skin/: Cargo.toml
crates/rubato-skin/benches/: skin_loader_bench.rs
crates/rubato-skin/src/: bitmap_font_batch_loader.rs  bitmap_font_cache.rs  custom_event.rs  float_formatter.rs  lib.rs  main_state.rs  (+44 more)
crates/rubato-song/: Cargo.toml
crates/rubato-state/: Cargo.toml
crates/rubato-types/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_json_skin_config.rs  fuzz_lr2_csv_loader.rs  fuzz_ms_adpcm_decoder.rs
golden-master/: Cargo.toml
golden-master/src/: database_fixtures.rs  e2e_helpers.rs  eval.rs  lib.rs  render_snapshot.rs  skin_fixtures.rs  state_provider.rs
golden-master/tests/: compare_audio.rs  compare_autoplay.rs  compare_bga_timeline.rs  compare_config.rs  compare_course_data.rs  compare_database.rs  compare_eval_test_skins.rs  compare_judge.rs  compare_judge_manager.rs  compare_pattern.rs  compare_pattern_modifiers.rs  compare_render_snapshot.rs  compare_replay.rs  compare_replay_e2e.rs  compare_rule.rs  compare_score_data_property.rs  compare_skin.rs  compare_song_information.rs  course_e2e.rs  e2e_edge_cases.rs  e2e_judge.rs  exhaustive_e2e.rs  full_pipeline_integration.rs  golden_master_expansion.rs  play_note_render_golden.rs  real_bms_integration.rs  replay_roundtrip_e2e.rs  skin_ecfn_integration.rs  test_skin_lua_utilities.rs  timing_boundary_e2e.rs
lr2oraja-rust/: .ast-compare-constants-ignore  .ast-compare-method-ignore  Cargo.toml  justfile
lr2oraja-rust/golden-master/: Cargo.toml
lr2oraja-rust/test-bms/: lnobj_test.bms  osu_7k_basic.osu  test_skin.json  test_skin.lr2skin  test_skin_options.json
(+1790 files in other folders)
