[package]
name = "rubato-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# Internal crates to fuzz
bms-model = { path = "../crates/bms-model" }
rubato-audio = { path = "../crates/rubato-audio" }
rubato-skin = { path = "../crates/rubato-skin" }
serde_json = "1"
encoding_rs = "0.8"

# Prevent this from joining the workspace
[workspace]

[[bin]]
name = "fuzz_bms_decoder"
path = "fuzz_targets/fuzz_bms_decoder.rs"
doc = false

[[bin]]
name = "fuzz_ms_adpcm_decoder"
path = "fuzz_targets/fuzz_ms_adpcm_decoder.rs"
doc = false

[[bin]]
name = "fuzz_json_skin_config"
path = "fuzz_targets/fuzz_json_skin_config.rs"
doc = false

[[bin]]
name = "fuzz_lr2_csv_loader"
path = "fuzz_targets/fuzz_lr2_csv_loader.rs"
doc = false
