[package]
name = "golden-master"
version.workspace = true
edition.workspace = true

[dependencies]
# Currently active
bms-model.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Needed by pending modules (src/pending/ and tests/pending/)
rubato-play.workspace = true
rubato-core.workspace = true
rubato-song.workspace = true
rubato-input.workspace = true
rubato-audio.workspace = true
rubato-skin.workspace = true
rubato-render.workspace = true
rubato-types.workspace = true

[dev-dependencies]
tempfile.workspace = true
image.workspace = true
