[workspace]
members = [
    "crates/bms-model",
    "crates/bms-table",
    "crates/beatoraja-common",
    "crates/discord-rpc",
    "crates/beatoraja-input",
    "crates/beatoraja-audio",
    "crates/md-processor",
    "crates/beatoraja-core",
    "crates/beatoraja-pattern",
    "crates/beatoraja-play",
    "crates/beatoraja-skin",
    "crates/beatoraja-select",
    "crates/beatoraja-result",
    "crates/beatoraja-decide",
    "crates/beatoraja-ir",
    "crates/beatoraja-external",
    "crates/beatoraja-obs",
    "crates/beatoraja-modmenu",
    "crates/beatoraja-stream",
    "crates/beatoraja-launcher",
    "crates/beatoraja-song",
    "crates/beatoraja-controller",
    "crates/beatoraja-system",
    "crates/beatoraja-bin",
    "crates/beatoraja-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
bms-model = { path = "crates/bms-model" }
bms-table = { path = "crates/bms-table" }
beatoraja-common = { path = "crates/beatoraja-common" }
discord-rpc = { path = "crates/discord-rpc" }
beatoraja-input = { path = "crates/beatoraja-input" }
beatoraja-audio = { path = "crates/beatoraja-audio" }
md-processor = { path = "crates/md-processor" }
beatoraja-core = { path = "crates/beatoraja-core" }
beatoraja-pattern = { path = "crates/beatoraja-pattern" }
beatoraja-play = { path = "crates/beatoraja-play" }
beatoraja-skin = { path = "crates/beatoraja-skin" }
beatoraja-select = { path = "crates/beatoraja-select" }
beatoraja-result = { path = "crates/beatoraja-result" }
beatoraja-decide = { path = "crates/beatoraja-decide" }
beatoraja-ir = { path = "crates/beatoraja-ir" }
beatoraja-external = { path = "crates/beatoraja-external" }
beatoraja-obs = { path = "crates/beatoraja-obs" }
beatoraja-modmenu = { path = "crates/beatoraja-modmenu" }
beatoraja-stream = { path = "crates/beatoraja-stream" }
beatoraja-launcher = { path = "crates/beatoraja-launcher" }
beatoraja-song = { path = "crates/beatoraja-song" }
beatoraja-controller = { path = "crates/beatoraja-controller" }
beatoraja-system = { path = "crates/beatoraja-system" }
beatoraja-types = { path = "crates/beatoraja-types" }

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
md-5 = "0.10"
sha2 = "0.10"

# Encoding
encoding_rs = "0.8"
base64 = "0.22"

# Logging
log = "0.4"

# HTTP
reqwest = { version = "0.12", features = ["blocking"] }

# Regex
regex = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Random
rand = "0.8"

# Date/Time
chrono = "0.4"

# Lazy initialization
lazy_static = "1"

# XML
quick-xml = { version = "0.37", features = ["serialize"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging (env-based)
env_logger = "0.11"

# Windowing
winit = "0.30"

# Testing
tempfile = "3"
