[workspace]
members = [
    "crates/bms-model",
    "crates/bms-table",
    "crates/beatoraja-input",
    "crates/beatoraja-audio",
    "crates/beatoraja-core",
    "crates/beatoraja-play",
    "crates/beatoraja-skin",
    "crates/beatoraja-ir",
    "crates/beatoraja-external",
    "crates/beatoraja-state",
    "crates/beatoraja-launcher",
    "crates/beatoraja-song",
    "crates/beatoraja-bin",
    "crates/beatoraja-types",
    "crates/beatoraja-render",
    "golden-master",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
bms-model = { path = "crates/bms-model" }
bms-table = { path = "crates/bms-table" }
beatoraja-input = { path = "crates/beatoraja-input" }
beatoraja-audio = { path = "crates/beatoraja-audio" }
beatoraja-core = { path = "crates/beatoraja-core" }
beatoraja-play = { path = "crates/beatoraja-play" }
beatoraja-skin = { path = "crates/beatoraja-skin" }
beatoraja-ir = { path = "crates/beatoraja-ir" }
beatoraja-external = { path = "crates/beatoraja-external" }
beatoraja-state = { path = "crates/beatoraja-state" }
beatoraja-launcher = { path = "crates/beatoraja-launcher" }
beatoraja-song = { path = "crates/beatoraja-song" }
beatoraja-types = { path = "crates/beatoraja-types" }

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
md-5 = "0.10"
sha2 = "0.10"

# Encoding
encoding_rs = "0.8"
base64 = "0.22"

# Logging
log = "0.4"

# HTTP
reqwest = { version = "0.12", features = ["blocking"] }

# Regex
regex = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Random
rand = "0.8"

# Date/Time
chrono = "0.4"

# Lazy initialization
lazy_static = "1"

# XML
quick-xml = { version = "0.37", features = ["serialize"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging (env-based)
env_logger = "0.11"

# Windowing
winit = "0.30"

# Clipboard
arboard = "3"

# Audio device enumeration
cpal = "0.17"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "ico", "tga", "tiff", "webp"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing
tempfile = "3"

# File dialog
rfd = "0.15"

# Open URLs/files in default app
open = "5"

# AES encryption
aes = "0.8"
cbc = "0.1"

# Compression
flate2 = "1"

# Archive extraction
tar = "0.4"
sevenz-rust = "0.6"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Parallelism
rayon = "1"

# Audio decoding
lewton = "0.10"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav"] }
kira = { version = "0.12", default-features = false, features = ["cpal", "wav", "mp3", "ogg", "vorbis", "flac", "pcm"] }
ebur128 = "0.1"

# GPU rendering
wgpu = "24"
ab_glyph = "0.2"
bytemuck = { version = "1", features = ["derive"] }
beatoraja-render = { path = "crates/beatoraja-render" }

# Lua scripting
mlua = { version = "0.10", features = ["lua54", "vendored"] }

# GUI
egui = "0.31"
egui-winit = "0.31"
egui-wgpu = "0.31"
eframe = { version = "0.31", default-features = false, features = ["wgpu"] }

# Video decoding
ffmpeg-next = "7"

# Gamepad input
gilrs = "0.11"

# MIDI
midir = "0.10"

# Memory profiling
dhat = "0.3"

[profile.dev]
debug = 0

[profile.release]
debug = 1  # Keep debug info for profiling stack traces
