[package]
name = "rubato-audio"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
bms.workspace = true

lewton = { workspace = true }
symphonia = { workspace = true }
kira = { workspace = true }
ebur128 = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
