[package]
name = "rubato-e2e"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
rubato-game = { workspace = true }
rubato-audio = { workspace = true }
rubato-types = { workspace = true }
rubato-input = { workspace = true }
rubato-render = { workspace = true }
bms = { workspace = true }

# Error handling
anyhow = { workspace = true }
