[package]
name = "rubato-launcher"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true

rubato-core = { workspace = true }
rubato-audio = { workspace = true }
rubato-input = { workspace = true }
rubato-ir = { workspace = true }
rubato-skin = { workspace = true }
rubato-play = { workspace = true }
rubato-external = { workspace = true }
rubato-state = { workspace = true }
rubato-types = { workspace = true }
bms-model = { workspace = true }
rubato-song = { workspace = true }
arboard = { workspace = true }
cpal = { workspace = true }
rfd = { workspace = true }
open = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
winit = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
encoding_rs = { workspace = true }
rusqlite = { workspace = true }
