[package]
name = "rubato-play"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model.workspace = true
rubato-types.workspace = true
rubato-core.workspace = true
rubato-audio.workspace = true
rubato-render.workspace = true
rubato-input.workspace = true
rubato-song.workspace = true
rubato-ir.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
ffmpeg-next = { workspace = true, optional = true }

[features]
ffmpeg = ["dep:ffmpeg-next"]

[dev-dependencies]
proptest = { workspace = true }
rubato-types = { workspace = true, features = ["test-support"] }
rubato-ir = { workspace = true, features = ["test-support"] }
