[package]
name = "rubato-render"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu = { workspace = true }
ab_glyph = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
winit = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
