[package]
name = "rubato-skin"
version.workspace = true
edition.workspace = true

[dependencies]
bms.workspace = true
rubato-types.workspace = true
rubato-skin-model.workspace = true
rubato-audio.workspace = true
rubato-input.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
encoding_rs.workspace = true
regex.workspace = true
chrono.workspace = true
rubato-render.workspace = true
mlua.workspace = true
ffmpeg-next = { workspace = true, optional = true }

[features]
ffmpeg = ["dep:ffmpeg-next"]

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rubato-types = { workspace = true, features = ["test-support"] }
rubato-game.workspace = true

[[bench]]
name = "skin_loader_bench"
harness = false
