[package]
name = "rubato-song"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model = { workspace = true }
rubato-core = { workspace = true }
rubato-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
regex.workspace = true
flate2 = { workspace = true }
tar = { workspace = true }
sevenz-rust = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
