[package]
name = "rubato-state"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
bms-model.workspace = true
rubato-core.workspace = true
rubato-types.workspace = true
rubato-play.workspace = true
rubato-audio.workspace = true
rubato-input.workspace = true
rubato-render.workspace = true
rubato-skin.workspace = true
rubato-song.workspace = true
rubato-ir.workspace = true

# External dependencies
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
arboard.workspace = true
open.workspace = true
egui.workspace = true

[features]
ffmpeg = ["rubato-play/ffmpeg"]

[dev-dependencies]
tempfile = { workspace = true }
image = { workspace = true }
rubato-types = { workspace = true, features = ["test-support"] }
rubato-ir = { workspace = true, features = ["test-support"] }
