[package]
name = "rubato-types"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
bms-model = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# Hashing
sha2 = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Compression (for ScoreData/ReplayData ghost encoding)
base64 = { workspace = true }
flate2 = { workspace = true }

# AES encryption for IR config
aes = { workspace = true }
cbc = { workspace = true }

[features]
test-support = []

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
