[package]
name = "rubato"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
bms = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# Regex
regex = { workspace = true }

# Encoding
base64 = { workspace = true }
encoding_rs = { workspace = true }
flate2 = { workspace = true }
urlencoding = { workspace = true }

# Crypto
aes = { workspace = true }
cbc = { workspace = true }
ecb = "0.1"

# Random
rand = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Hashing
md-5 = { workspace = true }
sha2 = { workspace = true }

# HTTP
reqwest = { workspace = true, features = ["json"] }

# XML
quick-xml = { workspace = true }

# Lazy initialization
lazy_static = { workspace = true }

# Rendering
image = { workspace = true }

# Clipboard
arboard = { workspace = true }

# Audio
lewton = { workspace = true }
symphonia = { workspace = true }
kira = { workspace = true }
ebur128 = { workspace = true }
cpal = { workspace = true }

# File dialog
rfd = { workspace = true }

# Open URLs/files
open = { workspace = true }

# GPU rendering
wgpu = { workspace = true }
ab_glyph = { workspace = true }
bytemuck = { workspace = true }

# GUI
egui = { workspace = true }
egui-wgpu = { workspace = true }
eframe = { workspace = true }
winit = { workspace = true }

# Database
rusqlite = { workspace = true }

# Parallelism
rayon = { workspace = true }

# Archive extraction
tar = { workspace = true }
sevenz-rust = { workspace = true }

# Temp files
tempfile = { workspace = true }

# Async
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# UUID
uuid = { workspace = true }

# Lua scripting
mlua = { workspace = true }

# Input devices
gilrs = { workspace = true }
midir = { workspace = true }

# Video decoding (optional)
ffmpeg-next = { workspace = true, optional = true }

[features]
ffmpeg = ["dep:ffmpeg-next"]
test-support = []

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }

[[test]]
name = "e2e_behavioral"
required-features = ["test-support"]

[[test]]
name = "texture_wiring"
required-features = ["test-support"]

[[bench]]
name = "modifier_bench"
harness = false
