[package]
name = "beatoraja-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
bms-model = { workspace = true }
beatoraja-common = { workspace = true }
beatoraja-input = { workspace = true }
beatoraja-audio = { workspace = true }
beatoraja-types = { workspace = true }

# Rendering
beatoraja-render = { workspace = true }
image = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# Database
rusqlite = { workspace = true }

# Encoding
base64 = { workspace = true }
flate2 = { workspace = true }

# Crypto (for IRConfig cipher)
aes = { workspace = true }
ecb = "0.1"

# Random
rand = { workspace = true }

# Date/Time
chrono = { workspace = true }
sha2.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
