[package]
name = "beatoraja-decide"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model.workspace = true
beatoraja-core.workspace = true
beatoraja-types.workspace = true
beatoraja-play.workspace = true
beatoraja-input.workspace = true
beatoraja-skin.workspace = true
log.workspace = true
anyhow.workspace = true

[dev-dependencies]
